# neuralgbi_diffusion

./: .gitignore  .matplotlibrc  README.md  diffusion_stats.ipynb  environment.yml  generate_data.ipynb  generate_datasets.sh  gm_simulator.ipynb  grad_clipping.ipynb  guided_diffusion_test_edit_julius.ipynb  guided_diffusion_two_moons.ipynb  net_dev.ipynb  pyproject.toml  run_c2c.sh  sanity_check.ipynb  start_c2c_services.sh  theta_diffusion_analysis.ipynb  verbose_readme.md
config/: evaluate_diffusion.yaml  mcmc.yaml  sampling_diffusion.yaml  sampling_mcmc.yaml  train.yaml  train_diffusion.yaml  train_guidance.yaml  train_potential.yaml  train_theta_noise.yaml
config/dataset/: dataset.yaml
config/diffusion/: diffusion.yaml
config/hydra/: hydra.yaml
config/model/: diffusion_model.yaml  guidance_model.yaml  potential_model.yaml
config/optimizer/: optimizer.yaml
gbi_diff/: __main__.py  entrypoint.py  experiment.py  process.py  pyro_1.ipynb
gbi_diff/dataset/: __init__.py  dataset.py  simulator_api.py  utils.py
gbi_diff/diffusion/: sampler.py  schedule.py
gbi_diff/model/: lit_module.py  networks.py  utils.py
gbi_diff/sampling/: __init__.py  diffusion.py  mcmc.py  potential_func.py  prior_distr.py  sampler.py  utils.py
notebooks/: benchmark_data_check.ipynb  diffusion_stats.ipynb  gaussian_kde.ipynb  gbi_diffusion_julius.ipynb  grad_clipping.ipynb  guidance_check.ipynb  guided_diffusion_test_edit_julius.ipynb  guided_diffusion_two_moons.ipynb  mcmc_analysis.ipynb  net_dev.ipynb  new_guidance.ipynb  pyro.ipynb  reimplement.ipynb  sanity_check.ipynb
(+60 files in other folders)
