[tool.poetry]
name = "neuralgbi-diffusion"
version = "0.1.0"
description = ""
authors = ["Robin Uhrich <robin.uhrich@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gpy = "^1.13.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
