[tool.poetry]
name = "neuralgbi-diffusion"
version = "0.1.0"
description = ""
authors = ["Robin Uhrich <robin.uhrich@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
sbi = "^0.21.0"
sbibm = "^1.1.0"
gpy = "^1.13.2"
hydra-core = "^1.3.2"
sourcerer = {git = "git@github.com:RobinU434/sourcerer.git"}
lightning = "^2.4.0"
pymc = "^5.18.0"
matplotlib = "^3.9.2"
contourpy = "^1.3.1"
seaborn = "^0.13.2"
einops = "^0.8.1"

[tool.poetry.group.dev.dependencies]
pyargwriter = {git = "git@github.com:RobinU434/PyArgWriter.git"}
config2class = {git = "git@github.com:RobinU434/Config2Class.git"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
